# auth-service

./: .dockerignore  .gitignore  Makefile  README.md  pyproject.toml
scripts/: create_tables.sql
src/adapters/inputs/api/: __init__.py  app.py  handler_exceptions.py  routers.py  schemas.py  settings.py
src/adapters/outputs/hashers/: bcrypt_hasher.py
src/adapters/outputs/repositories/: message_repository.py  models.py  refresh_token_repository.py  unit_of_work.py  user.py  user_repository.py  verification_code_repository.py
src/adapters/outputs/token/: pyjwt_manager.py
src/application/: exceptions.py
src/application/dto/: token_dto.py  user_dto.py
src/application/dtos/: token_dto.py  user_dto.py  verification_code_dto.py
src/application/events/: email_payload.py  integration_events.py
src/application/messages/: email_payloads.py  message.py  message_types.py  payload.py
src/application/ports/: input.py  output.py
src/application/use_cases/authentication/: login.py  refresh.py  revoke_all_refreshes.py  revoke_refresh.py
src/application/use_cases/token/: login.py  refresh.py  revoke_all_refreshes.py  revoke_refresh.py
src/domain/: code.py  code_factory.py  enums.py  exceptions.py  user.py  user_factory.py  utils.py  value_objects.py
src/domain/entities/: code.py  code_factory.py  user.py  user_factory.py  verification_code.py  verification_code_factory.py
src/domain/policies/: password.py
src/domain/value_objects/: code.py  email.py  password.py
tests/integration/: conftest.py
tests/unit/domain/: test_code_factory.py  test_user_factory.py
(+173 files in other folders)
