[project]
name = "auth-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bcrypt>=5.0.0",
    "pyjwt>=2.13.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.7",
    "taskipy>=1.14.1",
    "ty>=0.0.24",
]


[tool.ty.environment]
root = ["./src", "./tests/"]
python = "./.venv/bin/python"
python-version = "3.13"
python-platform = "linux"

[[tool.ty.overrides]]
include = ["tests/**", "**/test_*.py"]

[tool.ty.overrides.rules]
possibly-unresolved-reference = "warn"

[tool.pytest.ini_options]
pythonpath = "./src"
addopts = '-p no:warnings'
asyncio_default_fixture_loop_scope = 'function'
asyncio_mode = "auto"

[tool.ruff]
line-length = 79
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.lint.pylint]
max-args = 10

[tool.ruff.format]
preview = true
quote-style = 'single'


[tool.taskipy.tasks]
lint = 'ruff check' 

pre_format = 'ruff check --fix'

format = 'ruff format'

run = 'fastapi dev src/main.py'

pre_test = 'task lint && task format'

test = 'pytest -s -x --cov=src -vv'

post_test = 'coverage html'
